--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -6,7 +6,7 @@
 }
 body{
     font-family: 'Poppins', serif;
-    background-image: url(../IMAGES/john-towner-JgOeRuGD_Y4-unsplash.jpg);
+    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../IMAGES/john-towner-JgOeRuGD_Y4-unsplash.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
@@ -14,7 +14,7 @@ body{
 }
 .navbar{
     color: white;
-    padding: 1rem 5rem 1rem 5rem; 
+    padding: 1rem 5rem 3rem 5rem; 
 }
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
@@ -24,135 +24,116 @@ body{
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    font-size: 20px;
 }
-.navbar-nav a {
-	font-size: 15px;
-	font-weight: 400;
-	text-shadow: white;
-    color: white;
-}
-.navbar-light .navbar-nav .nav-link {
-	color: #fff;
-}
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-	color: orange;
-}
-.navbar-toggler {
-	padding: 1px 5px;
-	font-size: 18px;
-	line-height: 0.3;
-    color: orange;
-    background-image: linear-gradient(to right, #E23219, #FFB800);
-}
-.navbar .dropdown-menu .dropdown-item{
-    color: black
-}
-.navbar .dropdown-menu .dropdown-item:hover{
-    color: black;
-}
-.navbar-light .navbar-nav .nav-link {
-	color: #fff;
-}
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-	color: orange;
-}
-.navbar-toggler {
-	padding: 1px 5px;
-	font-size: 18px;
-	line-height: 0.3;
-    color: orange;
-    background-image: linear-gradient(to right, #E23219, #FFB800);
-}
-.navbar .dropdown-menu .dropdown-item{
-    color: black
-}
-.navbar .dropdown-menu .dropdown-item:hover{
-    color: black;
+.testimonial-grid{
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 1rem;
 }
 
-
-/* .cards{
-    margin-top: 100px;
-} */
-.card{
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
-   
+.grid-col-2{
+    grid-column: span 2;
+}
+.grid-col-3{
+    grid-column: span 3;
+}
+.grid-row-2{
+    grid-row: span 2;
+}
+.testimonial {
+    text-align: left;
     border-radius: 1rem;
-    border: 1px solid transparent;
-
     backdrop-filter: blur(1rem);
-    box-shadow: 1.3rem 1.3rem 1.3rem rgba(0,0,0,0.5);
-
-    border-top-color: rgba(225,225,225,0.5);
-    border-left-color: rgba(225,225,225,0.5);
-    border-bottom-color: rgba(225,225,225,0.1);
-    border-right-color: rgba(225,225,225,0.1);
+    background-color: rgba(225,225,225,0.1);
+    padding: 2rem;
 }
-.card h3{
+.testimonial h3{
     color: wheat;
 }
-.card p{
-    font-weight: 500;
+.testimonial p{
+    font-weight: 300;
+    line-height: 2rem;
+    text-align: justify;
 }
-.cb1{
-    background-color: rgba(225,225,225,0.1);
-}
-.cb2{
-    background-color: rgba(225,225,225,0.3);
-}
+
 .card-number{
     color: rgba(225,225,225,0.08);
     font-size: 5rem;
-    z-index: -1;
-    position: relative;
-    top: -1;
-    left: 4rem;
 }
 .card-title{
     color: orange;
-    font-weight: 800;
-    font-size: 2rem;
-    text-decoration: underline;
-}
-/* .cards a{
-    text-decoration: none;
-}
-.cards a{
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-color: black;
-    margin:0 10px 10px 0;
+    font-weight: 500;
+    font-size: 1.2rem;
     text-align: center;
-    line-height: 40px;
-    border-radius: 50%;
-    color: red;
-    transition: all 0.2s ease;
+    padding-bottom: 2rem;
 }
-*/
+h6{
+    font-size: small;
+}
+
 .ALU-logo{
     width: 320px;
     height: 100px;
 }
-.notes{
+
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(58.51deg, rgba(255, 255, 255, 0.05) 1.36%, rgba(255, 255, 255, 0.122) 96.3%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.65);
+    border-radius: 1rem;
+    width: 60%;
+    margin: 3rem auto;
+    padding: 3rem 0rem;
+}
+
+input {
+    border-radius: 1rem;
+    outline: none;
+    border: none;
+    width: 70%;
+    height: 3rem;
+    padding: 1rem;
+    margin-bottom: 3rem;
+    font-size: large;
+
+}
+div.comment-jumbotron{
+    padding: 5em 0;
+}
+.btn{
+    width: 30%;
+    border-radius: 20px;
+}
+div.comment-jumbotron h3{
     color: white;
-    text-align: center;
+    font-weight: 600;
+    font-size: 2rem;
 }
 .Note{
     color: red;
     font-style: italic;
 }
-
-div.comment-jumbotron{
-    padding: 5em 0;
+.Notes{
+    color: wheat;
+}
+.place{
+    color: pink;
+    font-style: italic;
+    font-size: 20px;
 }
 
-.section3{
+.section3 {
     background-color: black;
-    padding-top: 5rem;
+    border-top: rgb(101, 97, 97) solid 1px;
+    padding-top: 1rem;
 }
 .footer-jumbotron{
     text-align: center;
@@ -164,75 +145,128 @@ div.comment-jumbotron{
     font-size: 15px;
 }
 .footer-jumbotron p{
-    color: red;
+    color: white;
     font-weight: 400;
     font-size: 15px;
 }
+.imagePlaces{
+    display: flex;
+    justify-content: space-evenly;
+}
+.img-fluid1{
+    width: 40%;
+    height: 20rem;
+}
+.img-fluid1 img{
+    width: 100%;
+    height: 20rem;
+}
+.img-fluid2{
+    width: 50%;
+    padding: 1rem;
+}
+
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.navbar-nav {
 		text-align: center;
 	}
 	.navbar-collapse {
-		background: red;
+		background: #FFB800;
 	}
 	.navbar-collapse .nav-item .nav-link {
 		color: #000;
 	}
-    #first {
-		order: 1;
-	}
-	#second {
-		order: 4;
-	}
-	#third {
-		order: 6;
-	}
-	#fourth {
-		order: 2;
-	}
-    #fifth{
-        order: 7;
-    }
-    #sixth{
-        order: 3;
-    }
-    #seventh{
-        order: 5;
-    }
 } 
 @media only screen and (max-width: 767px) {
 	.navbar-nav {
 		text-align: center;
 	}
 	.navbar-collapse .nav-item .nav-link {
-		color: #000;
+        background-color: #FFB800;
 	}
-	.card{
-        margin-left: 30px;
+	.imagePlaces{
+        display: block;
     }
-	.navbar-collapse {
-		background: red;
-	}
-    #first {
-		order: 1;
-	}
-	#second {
-		order: 4;
-	}
-	#third {
-		order: 6;
-	}
-	#fourth {
-		order: 2;
-	}
-    #fifth{
-        order: 7;
+    .img-fluid1{
+        width: 100%;
+        height: 20rem;
     }
-    #sixth{
-        order: 3;
+    .img-fluid1 img{
+        width: 100%;
+        height: 20rem;
     }
-    #seventh{
-        order: 5;
+    .img-fluid2{
+        width: 100%;
     }
+    .navbar{
+        padding: 1rem 1rem 3rem 1rem; 
+    }
+ 
 }  
+@media screen and (max-width: 680px) {
+    .testimonial-grid{
+        display: grid;
+        gap: 1.5rem;
+        grid-template-columns: repeat(1, 100%);
+        padding: 1rem;
+    }
+    .grid-col-2{
+        grid-column: span 1;
+    }
+    .grid-col-3{
+        grid-column: span 1;
+    }
+    .grid-row-2{
+        grid-row: span 1;
+    }
+    .mauritius{
+        width: 100%;
+        margin: 0rem auto 1rem auto;
+    }
+    .careers{
+        width: 100%;
+    }
+}
+@media screen and (min-width: 680px) {
+    .testimonial-grid{
+        display: grid;
+        gap: 1.5rem;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 1rem;
+    }
+    .grid-col-2{
+        grid-column: span 1;
+    }
+    .grid-row-2{
+        grid-row: span 1;
+    }
+    .mauritius{
+        width: 100%;
+        margin: 0rem auto 1rem auto;
+    }
+    .careers{
+        width: 100%;
+    }
+}
+@media screen and (min-width: 940px) {
+    .testimonial-grid{
+        display: grid;
+        gap: 1.5rem;
+        grid-template-columns: repeat(3, 1fr);
+        padding: 1rem;
+    }
+    .grid-col-2{
+        grid-column: span 2;
+    }
+    .grid-row-2{
+        grid-row: span 2;
+    }
+    .mauritius{
+        width: 20rem;
+        margin: 0rem auto 1rem auto;
+    }
+    .careers{
+        width: 20rem;
+    }
+}
