--- a/CSS/story2.css
+++ b/CSS/story2.css
@@ -6,15 +6,17 @@
     font-family: 'Poppins', serif;
 }
 body{
-    background-image: url(../IMAGES/daniel-olah-ZbEURDlbE6o-unsplash.jpg);
+    font-family: 'Poppins', serif;
+    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../IMAGES/daniel-olah-ZbEURDlbE6o-unsplash.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
     color: white;
 }
 .navbar{
-    padding: 0 15em;
-} 
+    color: white;
+    padding: 1rem 5rem 3rem 5rem; 
+}
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
     height: 3em;
@@ -23,122 +25,50 @@ body{
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    font-size: 20px;
 }
-.navbar-nav a {
-	font-size: 15px;
-	font-weight: 700;
-	text-shadow: white;
-    color: white;
-}
-.navbar-light .navbar-nav .nav-link {
-	color: #fff;
-}
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-	color: orange;
-}
-.navbar-toggler {
-	padding: 1px 5px;
-	font-size: 18px;
-	line-height: 0.3;
-    color: orange;
-    background-image: linear-gradient(to right, #E23219, #FFB800);
-}
-.navbar .dropdown-menu .dropdown-item{
-    color: black
-}
-.navbar .dropdown-menu .dropdown-item:hover{
-    color: red;
-}
-.navbar-nav a {
-	font-size: 15px;
-	font-weight: 700;
-	text-shadow: white;
-    color: white;
-}
-.navbar-light .navbar-nav .nav-link {
-	color: #fff;
-}
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-	color: orange;
-}
-.navbar-toggler {
-	padding: 1px 5px;
-	font-size: 18px;
-	line-height: 0.3;
-    color: orange;
-    background-image: linear-gradient(to right, #E23219, #FFB800);
-}
-.navbar .dropdown-menu .dropdown-item{
-    color: black
-}
-.navbar .dropdown-menu .dropdown-item:hover{
-    color: red;
+.testimonial-grid{
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 1rem;
 }
 
-/* .cards{
-    margin-top: 100px;
-} */
-.card{
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
-   
-    border-radius: 20px;
-    border: 1px solid transparent;
-
+.grid-col-2{
+    grid-column: span 2;
+}
+.grid-col-3{
+    grid-column: span 3;
+}
+.grid-row-2{
+    grid-row: span 2;
+}
+.testimonial {
+    text-align: left;
+    border-radius: 1rem;
     backdrop-filter: blur(1rem);
-    box-shadow: 1.3rem 1.3rem 1.3rem rgba(0,0,0,0.5);
-
-    border-top-color: rgba(225, 225, 225, 0.2);
-    border-left-color: rgba(225,225,225,0.2);
-    border-bottom-color: rgba(225,225,225,0.1);
-    border-right-color: rgba(225,225,225,0.1); 
-}
-.card h3{
-    color: wheat;
-}
-.card p{
-    font-weight: 500;
-}
-.card.no1{
     background-color: rgba(225,225,225,0.1);
-    color: white;
-    border-radius: 20px;
+    padding: 2rem;
 }
-.card.no2{
-    background-color: rgba(225,225,225,0.2);
-    color: white;
-    border-radius: 20px;
+
+.testimonial p{
+    font-weight: 300;
+    line-height: 2rem;
+    text-align: justify;
 }
+
 .card-number{
-    color: rgba(225,225,225,0.05);
+    color: rgba(225,225,225,0.08);
     font-size: 5rem;
-    z-index: -1;
-    position: relative;
-    top: -1;
-    left: 4rem;
 }
 .card-title{
     color: orange;
-    font-weight: 800;
-    font-size: 2rem;
-    text-decoration: underline;
-}
-.card a{
-    text-decoration: none;
-}
-.card a{
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-color: white;
-    margin:0 10px 10px 0;
+    font-weight: 500;
+    font-size: 1.2rem;
     text-align: center;
-    line-height: 40px;
-    border-radius: 50%;
-    color: orangered;
-    transition: all 0.2s ease;
+    padding-bottom: 2rem;
+}
+h6{
+    font-size: small;
 }
 .ALU-logo{
     width: 320px;
@@ -151,9 +81,22 @@ body{
 .Notes{
     color: wheat;
 }
+div.comment-jumbotron{
+    padding: 5em 0;
+}
+.btn{
+    width: 30%;
+    border-radius: 20px;
+}
+div.comment-jumbotron h3{
+    color: white;
+    font-weight: 600;
+    font-size: 2rem;
+}
 .section3 {
     background-color: black;
-    padding-top: 5rem;
+    border-top: rgb(101, 97, 97) solid 1px;
+    padding-top: 1rem;
 }
 .footer-jumbotron{
     text-align: center;
@@ -165,17 +108,16 @@ body{
     font-size: 15px;
 }
 .footer-jumbotron p{
-    color: red;
+    color: white;
     font-weight: 400;
     font-size: 15px;
 }
-
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.navbar-nav {
 		text-align: center;
 	}
 	.navbar-collapse {
-		background: red;
+		background: #FFB800;
 	}
 	.navbar-collapse .nav-item .nav-link {
 		color: #000;
@@ -186,12 +128,73 @@ body{
 		text-align: center;
 	}
 	.navbar-collapse .nav-item .nav-link {
-		color: #000;
+        background-color: #FFB800;
 	}
-	.card{
-        margin-left: 30px;
+    .navbar{
+        padding: 1rem 1rem 3rem 1rem; 
     }
-	.navbar-collapse {
-		background: red;
-	}
+	
 } 
+@media screen and (max-width: 680px) {
+    .testimonial-grid{
+        display: grid;
+        gap: 1.5rem;
+        grid-template-columns: repeat(1, 100%);
+        padding: 1rem;
+    }
+    .grid-col-2{
+        grid-column: span 1;
+    }
+    .grid-row-2{
+        grid-row: span 1;
+    }
+    .mauritius{
+        width: 100%;
+        margin: 0rem auto 1rem auto;
+    }
+    .careers{
+        width: 100%;
+    }
+}
+@media screen and (min-width: 680px) {
+    .testimonial-grid{
+        display: grid;
+        gap: 1.5rem;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 1rem;
+    }
+    .grid-col-2{
+        grid-column: span 1;
+    }
+    .grid-row-2{
+        grid-row: span 1;
+    }
+    .mauritius{
+        width: 100%;
+        margin: 0rem auto 1rem auto;
+    }
+    .careers{
+        width: 100%;
+    }
+}
+@media screen and (min-width: 940px) {
+    .testimonial-grid{
+        display: grid;
+        gap: 1.5rem;
+        grid-template-columns: repeat(3, 1fr);
+        padding: 1rem;
+    }
+    .grid-col-2{
+        grid-column: span 2;
+    }
+    .grid-row-2{
+        grid-row: span 2;
+    }
+    .mauritius{
+        width: 20rem;
+        margin: 0rem auto 1rem auto;
+    }
+    .careers{
+        width: 20rem;
+    }
+}
