--- a/CSS/authors.css
+++ b/CSS/authors.css
@@ -21,7 +21,7 @@
 }
 .navbar-nav a {
 	font-size: 15px;
-	font-weight: 800;
+	font-weight: 400;
 	text-shadow: white;
     color: white;
 }
@@ -42,7 +42,7 @@
     color: black
 }
 .navbar .dropdown-menu .dropdown-item:hover{
-    color: red;
+    color: black;
 }
 .navbar-nav a {
 	font-size: 15px;
@@ -67,7 +67,7 @@
     color: black
 }
 .navbar .dropdown-menu .dropdown-item:hover{
-    color: red;
+    color: black;
 }
 
 .carousel-item{
