--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -25,6 +25,7 @@ body{
     justify-content: center;
     border-radius: 50%;
     font-size: 20px;
+    color: white;
 }
 .navbar-nav a {
 	font-size: 15px;
@@ -72,167 +73,255 @@ body{
 }
 
 
-/* .cards{
-    margin-top: 100px;
-} */
-.card{
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
-   
-    border-radius: 1rem;
-    border: 1px solid transparent;
-
-    backdrop-filter: blur(1rem);
-    box-shadow: 1.3rem 1.3rem 1.3rem rgba(0,0,0,0.5);
-
-    border-top-color: rgba(225,225,225,0.5);
-    border-left-color: rgba(225,225,225,0.5);
-    border-bottom-color: rgba(225,225,225,0.1);
-    border-right-color: rgba(225,225,225,0.1);
+.testimonial-grid{
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 1rem;
 }
-.card h3{
+
+.grid-col-2{
+    grid-column: span 2;
+}
+.grid-col-3{
+    grid-column: span 3;
+}
+.grid-row-2{
+    grid-row: span 2;
+}
+.testimonial {
+    text-align: left;
+    border-radius: 1rem;
+    backdrop-filter: blur(1rem);
+    background-color: rgba(225,225,225,0.1);
+    padding: 2rem;
+}
+.testimonial h3{
     color: wheat;
 }
-.card p{
-    font-weight: 500;
+.testimonial p{
+    font-weight: 300;
+    line-height: 2rem;
+    text-align: justify;
 }
-.cb1{
-    background-color: rgba(225,225,225,0.1);
-}
-.cb2{
-    background-color: rgba(225,225,225,0.3);
-}
+
 .card-number{
     color: rgba(225,225,225,0.08);
     font-size: 5rem;
-    z-index: -1;
-    position: relative;
-    top: -1;
-    left: 4rem;
 }
 .card-title{
     color: orange;
-    font-weight: 800;
+    font-weight: 500;
     font-size: 2rem;
-    text-decoration: underline;
-}
-/* .cards a{
-    text-decoration: none;
-}
-.cards a{
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-color: black;
-    margin:0 10px 10px 0;
     text-align: center;
-    line-height: 40px;
-    border-radius: 50%;
-    color: red;
-    transition: all 0.2s ease;
+    padding-bottom: 2rem;
 }
-*/
+h6{
+    font-size: small;
+}
+
 .ALU-logo{
-    width: 320px;
-    height: 100px;
+    width: 650px;
+    height: 120px;
 }
-.notes{
+.ALU1{
+    width: 650px;
+    height: 300px;
+}
+
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(58.51deg, rgba(255, 255, 255, 0.05) 1.36%, rgba(255, 255, 255, 0.122) 96.3%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.65);
+    border-radius: 1rem;
+    width: 60%;
+    margin: 3rem auto;
+    padding: 3rem 0rem;
+}
+
+input {
+    border-radius: 1rem;
+    outline: none;
+    border: none;
+    width: 70%;
+    height: 3rem;
+    padding: 1rem;
+    margin-bottom: 3rem;
+    font-size: large;
+
+}
+div.comment-jumbotron{
+    padding: 5em 0;
+}
+.btn{
+    width: 30%;
+    border-radius: 20px;
+}
+div.comment-jumbotron h3{
     color: white;
-    text-align: center;
+    font-weight: 600;
+    font-size: 2rem;
 }
 .Note{
     color: red;
     font-style: italic;
 }
-
-div.comment-jumbotron{
-    padding: 5em 0;
+.Notes{
+    color: wheat;
+}
+.place{
+    color: pink;
+    font-style: italic;
+    font-size: 20px;
 }
 
 .section3{
     background-color: black;
-    padding-top: 5rem;
 }
-.footer-jumbotron{
-    text-align: center;
-    
-}
+
 .footer-jumbotron h3{
-    color: white;
+    color: orange;
     font-weight: 400;
     font-size: 15px;
 }
 .footer-jumbotron p{
-    color: red;
+    color: orange;
     font-weight: 400;
     font-size: 15px;
 }
+.imagePlaces{
+    display: flex;
+    justify-content: space-evenly;
+}
+.img-fluid1{
+    width: 40%;
+    height: 15rem;
+}
+.img-fluid1 img{
+    width: 100%;
+    height: 15rem;
+}
+.img-fluid2{
+    width: 50%;
+    padding: 1rem;
+}
+.note{
+    text-align: center;
+    color: black;
+    font-weight: 700;
+}
+
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.navbar-nav {
 		text-align: center;
 	}
 	.navbar-collapse {
-		background: red;
+		background: #FFB800;
 	}
 	.navbar-collapse .nav-item .nav-link {
 		color: #000;
 	}
-    #first {
-		order: 1;
-	}
-	#second {
-		order: 4;
-	}
-	#third {
-		order: 6;
-	}
-	#fourth {
-		order: 2;
-	}
-    #fifth{
-        order: 7;
-    }
-    #sixth{
-        order: 3;
-    }
-    #seventh{
-        order: 5;
-    }
 } 
 @media only screen and (max-width: 767px) {
 	.navbar-nav {
 		text-align: center;
 	}
 	.navbar-collapse .nav-item .nav-link {
-		color: #000;
+        background-color: #FFB800;
 	}
-	.card{
-        margin-left: 30px;
+	.imagePlaces{
+        display: block;
     }
-	.navbar-collapse {
-		background: red;
-	}
-    #first {
-		order: 1;
-	}
-	#second {
-		order: 4;
-	}
-	#third {
-		order: 6;
-	}
-	#fourth {
-		order: 2;
-	}
-    #fifth{
-        order: 7;
+    .img-fluid1{
+        width: 100%;
+        height: 20rem;
     }
-    #sixth{
-        order: 3;
+    .img-fluid1 img{
+        width: 100%;
+        height: 20rem;
     }
-    #seventh{
-        order: 5;
+    .img-fluid2{
+        width: 100%;
     }
+    .navbar{
+        padding: 1rem 1rem 3rem 1rem; 
+    }
+    .footer-jumbotron{
+        text-align: center;
+    }
+ 
 }  
+@media screen and (max-width: 680px) {
+    .testimonial-grid{
+        display: grid;
+        gap: 1.5rem;
+        grid-template-columns: repeat(1, 100%);
+        padding: 1rem;
+    }
+    .grid-col-2{
+        grid-column: span 1;
+    }
+    .grid-col-3{
+        grid-column: span 1;
+    }
+    .grid-row-2{
+        grid-row: span 1;
+    }
+    .mauritius{
+        width: 100%;
+        margin: 0rem auto 1rem auto;
+    }
+    .careers{
+        width: 100%;
+    }
+}
+@media screen and (min-width: 680px) {
+    .testimonial-grid{
+        display: grid;
+        gap: 1.5rem;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 1rem;
+    }
+    .grid-col-2{
+        grid-column: span 1;
+    }
+    .grid-row-2{
+        grid-row: span 1;
+    }
+    .mauritius{
+        width: 100%;
+        margin: 0rem auto 1rem auto;
+    }
+    .careers{
+        width: 100%;
+    }
+}
+@media screen and (min-width: 940px) {
+    .testimonial-grid{
+        display: grid;
+        gap: 1.5rem;
+        grid-template-columns: repeat(3, 1fr);
+        padding: 1rem;
+    }
+    .grid-col-2{
+        grid-column: span 2;
+    }
+    .grid-row-2{
+        grid-row: span 2;
+    }
+    .mauritius{
+        width: 20rem;
+        margin: 0rem auto 1rem auto;
+    }
+    .careers{
+        width: 20rem;
+    }
+}
