--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -227,7 +227,7 @@ div.comment-jumbotron h3{
 		background: #FFB800;
 	}
 	.navbar-collapse .nav-item .nav-link {
-		color: #000;
+		color: black;
 	}
 } 
 @media only screen and (max-width: 767px) {
@@ -307,7 +307,7 @@ div.comment-jumbotron h3{
 @media screen and (min-width: 940px) {
     .testimonial-grid{
         display: grid;
-        gap: 1.5rem;
+        gap: 1.2rem;
         grid-template-columns: repeat(3, 1fr);
         padding: 1rem;
     }
