--- a/CSS/authors.css
+++ b/CSS/authors.css
@@ -117,24 +117,20 @@
 .w-100 {
 	height: 100vh;
 }
-.section3 {
+.section3{
     background-color: black;
-    padding-top: 5rem;
 }
-.footer{
-    text-align: center;
-    
-}
-.footer h3{
-    color: white;
+
+.footer-jumbotron h3{
+    color: orange;
     font-weight: 400;
     font-size: 15px;
 }
-.footer p{
-    color: red;
+.footer-jumbotron p{
+    color: orange;
     font-weight: 400;
     font-size: 15px;
-}
+} 
 
 
 @media only screen and (min-width: 768px) and (max-width: 991px)
