--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -14,7 +14,7 @@ body{
 }
 .navbar{
     color: white;
-    padding: 1rem 5rem 1rem 5rem; 
+    padding: 0 5em;
 }
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
@@ -219,46 +219,6 @@ div.comment-jumbotron h3{
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-	.navbar-nav {
-		text-align: center;
-	}
-	.navbar-collapse {
-		background: #FFB800;
-	}
-	.navbar-collapse .nav-item .nav-link {
-		color: black;
-	}
-} 
-@media only screen and (max-width: 767px) {
-	.navbar-nav {
-		text-align: center;
-	}
-	.navbar-collapse .nav-item .nav-link {
-        background-color: #FFB800;
-	}
-	.imagePlaces{
-        display: block;
-    }
-    .img-fluid1{
-        width: 100%;
-        height: 20rem;
-    }
-    .img-fluid1 img{
-        width: 100%;
-        height: 20rem;
-    }
-    .img-fluid2{
-        width: 100%;
-    }
-    .navbar{
-        padding: 1rem 1rem 3rem 1rem; 
-    }
-    .footer-jumbotron{
-        text-align: center;
-    }
- 
-}  
 @media screen and (max-width: 680px) {
     .testimonial-grid{
         display: grid;
@@ -267,9 +227,6 @@ div.comment-jumbotron h3{
         padding: 1rem;
     }
     .grid-col-2{
-        grid-column: span 1;
-    }
-    .grid-col-3{
         grid-column: span 1;
     }
     .grid-row-2{
@@ -307,7 +264,7 @@ div.comment-jumbotron h3{
 @media screen and (min-width: 940px) {
     .testimonial-grid{
         display: grid;
-        gap: 1.2rem;
+        gap: 1.5rem;
         grid-template-columns: repeat(3, 1fr);
         padding: 1rem;
     }
