--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -165,8 +165,8 @@ div.comment-jumbotron{
     border-radius: 20px;
 }
 div.comment-jumbotron h3{
-    color: white;
-    font-weight: 600;
+    color: orange;
+    font-weight: 500;
     font-size: 2rem;
 }
 .Note{
@@ -195,22 +195,6 @@ div.comment-jumbotron h3{
     color: orange;
     font-weight: 400;
     font-size: 15px;
-}
-.imagePlaces{
-    display: flex;
-    justify-content: space-evenly;
-}
-.img-fluid1{
-    width: 40%;
-    height: 15rem;
-}
-.img-fluid1 img{
-    width: 100%;
-    height: 15rem;
-}
-.img-fluid2{
-    width: 50%;
-    padding: 1rem;
 }
 .note{
     text-align: center;
@@ -248,6 +232,25 @@ div.comment-jumbotron h3{
 	.navbar-collapse .nav-item .nav-link {
 		color: #000;
 	}
+    .ALU-logo{
+        width: 367px;
+        height: 120px;
+    }
+    .grid-col-3{
+        grid-row: span 1;
+    }
+    .grid-col-3{
+        grid-column: span 1;
+    }
+    .imagePlaces{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+    }
+    .img-fluid2{
+        flex-direction: column;
+        width: 100;
+    }
 }
 @media screen and (min-width: 680px) {
     .testimonial-grid{
