--- a/CSS/story4.css
+++ b/CSS/story4.css
@@ -139,8 +139,8 @@ div.comment-jumbotron{
     border-radius: 20px;
 }
 div.comment-jumbotron h3{
-    color: white;
-    font-weight: 600;
+    color: orange;
+    font-weight: 500;
     font-size: 2rem;
 }
 .Note{
@@ -182,6 +182,9 @@ div.comment-jumbotron h3{
     .grid-row-2{
         grid-row: span 1;
     }
+    .grid-col-3{
+        grid-column: span 1;
+    }
     .mauritius{
         width: 100%;
         margin: 0rem auto 1rem auto;
@@ -197,7 +200,9 @@ div.comment-jumbotron h3{
 	}
 	.navbar-collapse .nav-item .nav-link {
 		color: #000;
-	}
+	}.footer-jumbotron{
+        text-align: center;
+    }
 }
 @media screen and (min-width: 680px) {
     .testimonial-grid{
