--- a/CSS/index.css
+++ b/CSS/index.css
@@ -469,7 +469,10 @@ img.images-ALU{
 		background: orange;
 	}
 	.navbar-collapse .nav-item .nav-link {
-		color: #000;
+		color: white;
+	}
+    .navbar-collapse .nav-item .nav-link:hover {
+		color: black;
 	}
 }
 
