--- a/CSS/author.css
+++ b/CSS/author.css
@@ -143,7 +143,10 @@ p span{
 		background: #FFB800;
 	}
 	.navbar-collapse .nav-item .nav-link {
-		color: #000;
+		color: white;
+	}
+    .navbar-collapse .nav-item .nav-link:hover {
+		color: black;
 	}
 	.carousel-caption {
 		bottom: 165px;
@@ -164,7 +167,10 @@ p span{
 		text-align: center;
 	}
 	.navbar-collapse .nav-item .nav-link {
-		color: #000;
+		color: white;
+	}
+    .navbar-collapse .nav-item .nav-link:hover {
+		color: black;
 	}
 	.carousel-caption {
 		bottom: 120px;
