--- a/CSS/story5.css
+++ b/CSS/story5.css
@@ -194,7 +194,10 @@ div.comment-jumbotron h3{
 		background: orange;
 	}
 	.navbar-collapse .nav-item .nav-link {
-		color: #000;
+		color: white;
+	}
+    .navbar-collapse .nav-item .nav-link:hover {
+		color: black;
 	}
     .footer-jumbotron{
         text-align: center;
