--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -201,6 +201,12 @@ div.comment-jumbotron h3{
     color: black;
     font-weight: 700;
 }
+.btn{
+    margin-left: 90px;
+}
+.btn:hover{
+    color: orange;
+}
 
 
 @media screen and (max-width: 680px) {
