--- a/CSS/author.css
+++ b/CSS/author.css
@@ -56,7 +56,7 @@
 	background-image: url(../IMAGES/IMG-DEE.jpg);
 }
 .bg-2 {
-	background-image: url(../IMAGES/Ekhat.jpg);
+	background-image: url(../IMAGES/jke.jpeg);
 }
 .bg-3 {
 	background-image: url(../IMAGES/justusw.jpeg);
