--- a/CSS/author.css
+++ b/CSS/author.css
@@ -62,7 +62,7 @@
 	background-image: url(../IMAGES/justusw.jpeg);
 }
 .bg-4 {
-	background-image: url(../IMAGES/mangaliso.jpeg);
+	background-image: url(../IMAGES/Manga/Manga_author.JPG);
 }
 .bg-5 {
 	background-image: url(../IMAGES/Untitled\ design\ \(2\).png);
