--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -128,35 +128,12 @@ h6{
     width: 650px;
     height: 300px;
 }
-
-
-.contact-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(58.51deg, rgba(255, 255, 255, 0.05) 1.36%, rgba(255, 255, 255, 0.122) 96.3%);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.65);
-    border-radius: 1rem;
-    width: 60%;
-    margin: 3rem auto;
-    padding: 3rem 0rem;
+.hello{
+    font-size: 2rem;
+    font-weight: 300;
+    margin-left: 2rem;
 }
 
-input {
-    border-radius: 1rem;
-    outline: none;
-    border: none;
-    width: 70%;
-    height: 3rem;
-    padding: 1rem;
-    margin-bottom: 3rem;
-    font-size: large;
-
-}
 div.comment-jumbotron{
     padding: 5em 0;
 }
