--- a/CSS/story5.css
+++ b/CSS/story5.css
@@ -48,7 +48,7 @@ body{
     color: black
 }
 .navbar .dropdown-menu .dropdown-item:hover{
-    color: black;
+    color: orange;
 }
 
 .testimonial-grid{
