--- a/CSS/author.css
+++ b/CSS/author.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500&display=swap");
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', serif;
-}   
+}
 .navbar{
     padding: 0 5em;
 } 
@@ -16,8 +16,8 @@
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+    color: white;
     font-size: 20px;
-    color: black;
 }
 .navbar-nav a {
 	font-size: 15px;
@@ -25,10 +25,10 @@
 	text-shadow: white;
     color: white;
 }
-.light .navbar-nav .nav-link {
+.navbar-light .navbar-nav .nav-link {
 	color: #fff;
 }
-.light .navbar-nav .nav-link:focus, .light .navbar-nav .nav-link:hover {
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
 	color: orange;
 }
 .navbar-toggler {
