--- a/CSS/author.css
+++ b/CSS/author.css
@@ -136,9 +136,6 @@ p span{
     font-size: 15px;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-	.navbar-nav {
-		text-align: center;
-	}
 	.navbar-collapse {
 		background: #FFB800;
 	}
@@ -146,7 +143,16 @@ p span{
 		color: white;
 	}
     .navbar-collapse .nav-item .nav-link:hover {
-		color: black;
+		color: orange;
+	}
+	.logo {
+        height: 4rem;
+        width: 4rem;
+        display: flex;
+        margin-left: -60px;
+    }
+	.navbar{
+		width: 100%;
 	}
 	.carousel-caption {
 		bottom: 165px;
@@ -170,8 +176,14 @@ p span{
 		color: white;
 	}
     .navbar-collapse .nav-item .nav-link:hover {
-		color: black;
+		color: orange;
 	}
+	.logo {
+        height: 4rem;
+        width: 4rem;
+        display: flex;
+        margin-left: -60px;
+    }
 	.carousel-caption {
 		bottom: 120px;
 	}
