add new changes

--- a/CSS/author.css
+++ b/CSS/author.css
@@ -37,6 +37,8 @@
 	line-height: 0.3;
     color: orange;
     background-image: linear-gradient(to right, #E23219, #FFB800);
+	height: 3rem;
+    width: 4rem;
 }
 .navbar .dropdown-menu .dropdown-item{
     color: black
@@ -181,9 +183,10 @@ p span{
 	.logo {
         height: 4rem;
         width: 4rem;
-        display: flex;
-        margin-left: -60px;
-    }
+    } 
+	.navbar{
+		padding: 0 0.1em;
+	}
 	.carousel-caption {
 		bottom: 120px;
 	}
