--- a/CSS/story2.css
+++ b/CSS/story2.css
@@ -69,6 +69,8 @@ body{
 	line-height: 0.3;
     color: orange;
     background-image: linear-gradient(to right, #E23219, #FFB800);
+    height: 3rem;
+    width: 4rem;
 }
 .navbar .dropdown-menu .dropdown-item{
     color: black
@@ -189,9 +191,10 @@ div.comment-jumbotron h3{
     .logo {
         height: 4rem;
         width: 4rem;
-        display: flex;
-        margin-left: -60px;
-    }
+     } 
+    .navbar{
+		padding: 0 0.1em;
+	}
     .navbar-nav {
 		text-align: center;
 	}
