--- a/CSS/index.css
+++ b/CSS/index.css
@@ -79,6 +79,8 @@ section {
 	line-height: 0.3;
     color: orange;
     background-image: linear-gradient(to right, #E23219, #FFB800);
+    height: 3rem;
+    width: 4rem;
 }
 .navbar .dropdown-menu .dropdown-item{
     color: black
