--- a/CSS/story5.css
+++ b/CSS/story5.css
@@ -121,16 +121,10 @@ div.comment-jumbotron h3{
     font-weight: 500;
     font-size: 2rem;
 }
-
-.place{
-    color: pink;
-    font-style: italic;
-    font-size: 20px;
-}
 .note{
     text-align: center;
-    color: black;
-    font-weight: 500;
+    color: white;
+    font-weight: 700;
 }
 .section3 {
     background-color: black;
